tests/assets/macro-data/fail_if_attribute_args_include_self.stderr
error: custom attribute panicked
 --> $WORKSPACE/tests/assets/macro-data/fail_if_attribute_args_include_self.rs
  |
  | / #[indexer(
  | |     abi = "./test_data/contracts-abi.json",
  | |     namespace = "test_namespace",
  | |     identifier = "bar",
  | |     schema = "./test_data/schema.graphql",
  | | )]
  | |__^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: failed to read artifact JSON file with path $DIR/./test_data/contracts-abi.json

          Caused by:
              No such file or directory (os error 2)

error[E0601]: `main` function not found in crate `$CRATE`
  --> $WORKSPACE/tests/assets/macro-data/fail_if_attribute_args_include_self.rs
   |
   | }
   |  ^ consider adding a `main` function to `$WORKSPACE/tests/assets/macro-data/fail_if_attribute_args_include_self.rs`
